--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/mast-O-musir.html">Mast-O-moosir</a>
+        <ul>
+            <li><a href="recipes/mast-O-musir.html">Mast-O-moosir</a></li>
+            <li><a href="recipes/black-beans-sauce.html">Black Bean Sauce</a></li>
+            <li><a href ="recipes/chocolate-cake.html">Chocolate Cake</a></li>
+        </ul>
+        
     </body>
 </html>
